// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerScreen Appbar should render multi select as expected 1`] = `
<Appbar>
  <AppbarAction
    icon="close"
    onPress={[Function]}
  />
  <AppbarContent
    title=""
  />
  <AppbarAction
    icon="check"
    onPress={[Function]}
  />
</Appbar>
`;

exports[`PickerScreen Appbar should render single select as expected 1`] = `
<Appbar>
  <AppbarAction
    icon="close"
    onPress={[Function]}
  />
  <AppbarContent
    title=""
  />
</Appbar>
`;

exports[`PickerScreen List list item multi select should properly render custom item content 1`] = `
<Styled(View)>
  <View>
    <Text>
      mock data
    </Text>
    <Styled(Subheading)>
      mock data
    </Styled(Subheading)>
  </View>
</Styled(View)>
`;

exports[`PickerScreen List list item multi select should properly render default item content 1`] = `
<Styled(View)>
  <Styled(Subheading)>
    mock data
  </Styled(Subheading)>
</Styled(View)>
`;

exports[`PickerScreen List list item single select should properly render custom item content 1`] = `
<Styled(View)>
  <View>
    <Text>
      mock data
    </Text>
    <Styled(Subheading)>
      mock data
    </Styled(Subheading)>
  </View>
</Styled(View)>
`;

exports[`PickerScreen List list item single select should properly render default item content 1`] = `
<Styled(View)>
  <Styled(Subheading)>
    mock data
  </Styled(Subheading)>
</Styled(View)>
`;
